Details
-
Bug
-
Resolution: Done
-
P2: Important
-
5.15.2
-
None
-
-
c990bdbf8ec922dd7702a2a0e33b9b70db3ac6ee (qt/qtserialbus/dev)
Description
I'm running MODBUS server on the desktop PC via USB-RS485 adapter (baudrate = 115200) and I have request timeouts and stalls. I have activated low level QtSerialBus logs and saw this:
Dropping older ADU fragments due to larger than 3.5 char delay (expected: 2 , max: 15 )
Apparently, m_interFrameDelayMilliseconds is too low for my setup, however there is no direct way to fix it (like QtModbusRtuSerial*Master*::setInterFrameDelay).
Dirty workaround is to open serial port at lowest baudrate (i.e. 1200) and change it via direct call to the QSerialPort::setBaudRate.
So, there are either a bug in m_interFrameDelayMilliseconds or there should be QtModbusRtuSerial*Slave*::setInterFrameDelay call, or both.
Attachments
For Gerrit Dashboard: QTBUG-89995 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
329660,4 | Allow setting the RTU inter frame delay on slaves as well | dev | qt/qtserialbus | Status: MERGED | +2 | 0 |