Allow setting the RTU inter frame delay on slaves as well

Fixes: QTBUG-89995
Change-Id: I401d2511b336367801d941ec1f5e06cc4cd6cd08
Reviewed-by: André Hartmann <aha_1980@gmx.de>